--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
             <div id="add-exercise-form">
                 <label for="predefined-exercises">Exercícios Padrão:</label>
                 <select id="predefined-exercises"></select>
+                <label for="predefined-exercises">Exercícios fora do Padrão:</label>
                 <input type="text" id="exercise-name" placeholder="Nome do Exercício (ou digite um novo)">
+                <label for="predefined-exercises">Numero de Séries:</label>
                 <input type="number" id="sets" placeholder="Séries">
+                <label for="predefined-exercises">Numero de Repetições:</label>
                 <input type="text" id="reps" placeholder="Repetições (ex: 10 ou 6-8)">
+                <label for="predefined-exercises">Carga para o Exercicio:</label>
                 <input type="text" id="exercise-load" placeholder="Carga (ex: 10kg, 5lb)"> <!-- Novo campo -->
+                <label for="predefined-exercises">Tempo de descanso:</label>
                 <input type="text" id="rest-time" placeholder="Tempo de Descanso (ex: 60s)">
+                <label for="predefined-exercises">Observações:</label>
                 <textarea id="observation" placeholder="Observações (opcional)"></textarea>
                 <button id="add-exercise-button">Adicionar Exercício</button>
             </div>
